Replace HashMap and HashSet with Linked versions to preserve iteration ordering