@@ -14,8 +14,8 @@ import com.microsoft.typespec.http.client.generator.core.util.ClientModelUtil;
 import com.microsoft.typespec.http.client.generator.core.util.MethodUtil;
 import io.clientcore.core.http.models.HttpMethod;
 import io.clientcore.core.utils.CoreUtils;
+
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
@@ -193,7 +193,7 @@ final class ProxyMethodParameterProcessor {
      */
     private static List<ProxyMethodParameter> getSpecialHeaderParameters(Operation operation) {
         if (!supportsRepeatabilityRequest(operation)) {
-            return Collections.emptyList();
+            return List.of();
         }
         final List<ProxyMethodParameter> parameters = new ArrayList<>();
         parameters.add(ProxyMethodParameter.REPEATABILITY_REQUEST_ID_PARAMETER);
