@@ -5,7 +5,7 @@ package com.microsoft.typespec.http.client.generator.core.model.clientmodel;
 
 import com.microsoft.typespec.http.client.generator.core.extension.plugin.JavaSettings;
 import com.microsoft.typespec.http.client.generator.core.util.ClientModelUtil;
-import java.util.Collections;
+
 import java.util.List;
 import java.util.Set;
 
@@ -392,7 +392,7 @@ public class ServiceClient {
         protected SecurityInfo securityInfo;
         protected String baseUrl;
         protected PipelinePolicyDetails pipelinePolicyDetails;
-        protected List<ClientAccessorMethod> clientAccessorMethods = Collections.emptyList();
+        protected List<ClientAccessorMethod> clientAccessorMethods = List.of();
         private String crossLanguageDefinitionId;
 
         /**
