@@ -7,8 +7,9 @@ import com.microsoft.typespec.http.client.generator.core.extension.model.codemod
 import com.microsoft.typespec.http.client.generator.core.extension.plugin.JavaSettings;
 import com.microsoft.typespec.http.client.generator.core.mapper.Mappers;
 import com.microsoft.typespec.http.client.generator.core.util.CodeNamer;
-import java.util.Arrays;
+
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -59,7 +60,7 @@ public class XmlSequenceWrapper {
     }
 
     private static Set<String> getXmlSequenceWrapperImports() {
-        return new HashSet<>(Arrays.asList("com.fasterxml.jackson.annotation.JsonCreator",
+        return new HashSet<>(List.of("com.fasterxml.jackson.annotation.JsonCreator",
             "com.fasterxml.jackson.annotation.JsonProperty",
             "com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty",
             "com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlRootElement",
