@@ -4,8 +4,8 @@
 package com.microsoft.typespec.http.client.generator.core.model.javamodel;
 
 import io.clientcore.core.utils.CoreUtils;
+
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
@@ -173,7 +173,7 @@ public class JavaClass implements JavaType {
      */
     public final void staticMethod(JavaVisibility visibility, String methodSignature, Consumer<JavaBlock> method) {
         Objects.requireNonNull(visibility, "'visibility' cannot be null.");
-        method(visibility, Collections.singletonList(JavaModifier.Static), methodSignature, method);
+        method(visibility, List.of(JavaModifier.Static), methodSignature, method);
     }
 
     public final void interfaceBlock(JavaVisibility visibility, String interfaceSignature,
@@ -194,8 +194,7 @@ public class JavaClass implements JavaType {
     public final void staticFinalClass(JavaVisibility visibility, String classSignature,
         Consumer<JavaClass> classBlock) {
         addExpectedNewLine();
-        contents.classBlock(visibility, Arrays.asList(JavaModifier.Static, JavaModifier.Final), classSignature,
-            classBlock);
+        contents.classBlock(visibility, List.of(JavaModifier.Static, JavaModifier.Final), classSignature, classBlock);
         addNewLine = true;
     }
 
