@@ -28,16 +28,16 @@ import com.microsoft.typespec.http.client.generator.mgmt.model.clientmodel.Fluen
 import com.microsoft.typespec.http.client.generator.mgmt.model.clientmodel.FluentStatic;
 import com.microsoft.typespec.http.client.generator.mgmt.util.FluentJavaSettings;
 import com.microsoft.typespec.http.client.generator.mgmt.util.Utils;
+import org.slf4j.Logger;
+
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import org.slf4j.Logger;
 
 public class FluentMapper {
 
@@ -79,7 +79,7 @@ public class FluentMapper {
                         .findFirst();
                     if (collectionOpt.isPresent()) {
                         FluentResourceCollection collection = collectionOpt.get();
-                        ResourceParser.parseResourcesCategory(collection, Collections.singletonList(model),
+                        ResourceParser.parseResourcesCategory(collection, List.of(model),
                             FluentStatic.getClient().getModels());
                     } else {
                         LOGGER.warn("Resource collection '{}' not found in association override '{}' to '{}'.",
