@@ -15,13 +15,13 @@ import com.microsoft.typespec.http.client.generator.mgmt.model.FluentType;
 import com.microsoft.typespec.http.client.generator.mgmt.model.WellKnownMethodName;
 import com.microsoft.typespec.http.client.generator.mgmt.util.TypeConversionUtils;
 import com.microsoft.typespec.http.client.generator.mgmt.util.Utils;
+import org.slf4j.Logger;
+
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import org.slf4j.Logger;
 
 public class FluentMethodGroupMapper extends MethodGroupMapper {
 
@@ -35,11 +35,9 @@ public class FluentMethodGroupMapper extends MethodGroupMapper {
 
     @Override
     protected List<IType> supportedInterfaces(OperationGroup operationGroup, List<ClientMethod> clientMethods) {
-        if (!JavaSettings.getInstance().isFluentLite()) {
-            return findSupportedInterfaces(operationGroup, clientMethods);
-        } else {
-            return Collections.emptyList();
-        }
+        return !JavaSettings.getInstance().isFluentLite()
+            ? findSupportedInterfaces(operationGroup, clientMethods)
+            : List.of();
     }
 
     List<IType> findSupportedInterfaces(OperationGroup operationGroup, List<ClientMethod> clientMethods) {
