@@ -19,17 +19,15 @@ import com.microsoft.typespec.http.client.generator.mgmt.FluentNamer;
 import com.microsoft.typespec.http.client.generator.mgmt.model.FluentType;
 import com.microsoft.typespec.http.client.generator.mgmt.util.Utils;
 import io.clientcore.core.utils.CoreUtils;
+import org.slf4j.Logger;
+
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.slf4j.Logger;
 
 public class ErrorTypeNormalization {
 
@@ -52,9 +50,8 @@ public class ErrorTypeNormalization {
     }
 
     private static final Set<String> MANAGEMENT_ERROR_FIELDS
-        = new HashSet<>(Arrays.asList("code", "message", "target", "details", "additionalInfo"));
-    private static final Set<String> MANAGEMENT_ERROR_FIELDS_MIN_REQUIRED
-        = new HashSet<>(Arrays.asList("code", "message"));
+        = Set.of("code", "message", "target", "details", "additionalInfo");
+    private static final Set<String> MANAGEMENT_ERROR_FIELDS_MIN_REQUIRED = Set.of("code", "message");
 
     private static final ObjectSchema DUMMY_ERROR = dummyManagementError();
 
@@ -130,8 +127,8 @@ public class ErrorTypeNormalization {
 
                 // make it a subclass of ManagementError
                 Relations parents = new Relations();
-                parents.setAll(Collections.singletonList(DUMMY_ERROR));
-                parents.setImmediate(Collections.singletonList(DUMMY_ERROR));
+                parents.setAll(List.of(DUMMY_ERROR));
+                parents.setImmediate(List.of(DUMMY_ERROR));
                 errorSchema.setParents(parents);
 
                 if (errorSchema != error) {
@@ -249,8 +246,8 @@ public class ErrorTypeNormalization {
                     case SUBCLASS_MANAGEMENT_ERROR:
                     case GENERIC:
                         Relations parents = new Relations();
-                        parents.setAll(Collections.singletonList(DUMMY_ERROR));
-                        parents.setImmediate(Collections.singletonList(DUMMY_ERROR));
+                        parents.setAll(List.of(DUMMY_ERROR));
+                        parents.setImmediate(List.of(DUMMY_ERROR));
                         error.setParents(parents);
 
                         filterProperties(error);
