@@ -16,10 +16,11 @@ import com.microsoft.typespec.http.client.generator.mgmt.FluentNamer;
 import com.microsoft.typespec.http.client.generator.mgmt.model.WellKnownMethodName;
 import com.microsoft.typespec.http.client.generator.mgmt.util.Utils;
 import io.clientcore.core.http.models.HttpMethod;
-import java.util.Arrays;
+import org.slf4j.Logger;
+
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -29,7 +30,6 @@ import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import org.slf4j.Logger;
 
 /**
  * Normalizes the names of common operations (list, get, delete).
@@ -102,10 +102,10 @@ class OperationNameNormalization {
 
     private static Map<String, String> makeRenamePlan(OperationGroup operationGroup) {
         final Set<WellKnownMethodName> candidateWellKnownName
-            = new HashSet<>(Arrays.asList(WellKnownMethodName.LIST, WellKnownMethodName.LIST_BY_RESOURCE_GROUP,
+            = new LinkedHashSet<>(List.of(WellKnownMethodName.LIST, WellKnownMethodName.LIST_BY_RESOURCE_GROUP,
                 WellKnownMethodName.GET_BY_RESOURCE_GROUP, WellKnownMethodName.DELETE));
 
-        Map<String, String> renamePlan = new HashMap<>();
+        Map<String, String> renamePlan = new LinkedHashMap<>();
 
         for (Operation operation : operationGroup.getOperations()) {
             String path = operation.getRequests().iterator().next().getProtocol().getHttp().getPath().trim();
